--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-27 01:57:19
+lastsearch = 2024-07-27 02:13:52
 
 [www.lazada.vn]
 match = -94.4%%
 title = Nệm Siêu Nhẹ Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/nem-sieu-nhe/
+url = https://www.lazada.vn/tag/nem-sieu-nhe/?srsltid=AfmBOorUdUb-fZ3evSFsUd0xGFgsxkbxKmpEBjSzmAo9WO0FP-vDV-DR
 
 [m.facebook.com]
 match = -72.2%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -133.3%%
-title = Siêu Thị Nệm - Nệm gấp 3 cao su tổng hợp Thái Lan ...
-url = https://www.facebook.com/sieuthinem/posts/nệm-gấp-3-cao-su-tổng-hợp-thái-lan-khuyến-mãi-giảm-giá-đặc-biệt-tại-wwwnemvn1giả/2342249222605666/
+match = -150.0%%
+title = Siêu Thị Nệm - 267 Phan Đình Phùng, P15, Phú Nhuận, ...
+url = https://www.facebook.com/sieuthinem267/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -5.6%%
-title = Boox Go Color 7 Manga
-url = https://www.tiktok.com/discover/boox-go-color-7-manga
+match = -144.4%%
+title = 📍nem cuốn: 4 hoè nhai. ⭐️: 10-40 cành. #LearnOnTikTok ...
+url = https://www.tiktok.com/@longlongneee/video/7272331567031209224
 
 [vi.wikipedia.org]
 match = -27.8%%
