--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-07-27 01:59:45
+lastsearch = 2024-07-27 02:34:37
 
 [www.facebook.com]
 match = -141.2%%
@@ -14,16 +14,16 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOopxUdZgsfVcw_O6tR_mv7AEDzkvcjxUa0WXVCWCD7XVnu5VONnw
+url = https://www.teadrunk.com/products/red-tea-chan-cha
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOoqXOm5-7ak4F8miBhCPbFpe5_JFACwj8-Sk_dB8LbDsaEsOrVKu
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
-match = -176.5%%
-title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao ...
+match = -194.1%%
+title = Royal Durian Singapore - ⛟ Free delivery Get 4kg of Mao Shan ...
 url = https://m.facebook.com/RoyalDurian/photos/a.3010278729046072/3525143447559595/?type=3
 
 [en.wikipedia.org]
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -194.1%%
-title = Nine traditional Chinese herbal formulas for the treatment ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5036551/
+match = -200.0%%
+title = Seeing the unseen of Chinese herbal medicine processing ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
 
 [books.google.com]
 match = -7.7%%
