--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-27 00:14:23
+lastsearch = 2024-07-27 02:39:30
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -12,9 +12,9 @@ title = Chiếu cây Đài Loan 140x190
 url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [dungcuykhoakimminh.com]
-match = 0.0%%
-title = Tìm kiếm từ khóa: ion
-url = https://dungcuykhoakimminh.com/tag/ion&trang-19
+match = -4.8%%
+title = Tìm kiếm từ khóa: Tao
+url = https://dungcuykhoakimminh.com/tag/Tao&trang-21
 
 [mych.vn]
 match = -60.7%%
@@ -187,9 +187,9 @@ title = Bản đồ website Dropbiz
 url = https://dropbiz.vn/ban-do-website-droppii
 
 [m.facebook.com]
-match = -5.6%%
-title = TƯ VẤN Dh ĐÀI LOAN
-url = https://m.facebook.com/DOHIENDUHOC/?comment_id=Y29tbWVudDoxMTAyNzE0MjkzNTQzODk0XzExMDI3Mjc1MjAyMDkyMzg=
+match = -39.3%%
+title = ĐỨC HÒA LONG AN | - E cần các chị nhận Tỏi về bóc ...
+url = https://m.facebook.com/groups/3612064075496936/posts/7805379876165314/
 
 [www.instagram.com]
 match = -64.3%%
