--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-27 01:53:50
+lastsearch = 2024-07-27 02:28:23
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -150.0%%
-title = American Soap Journal and Manufacturing Chemist
-url = https://books.google.com/books?id=EF1YAAAAYAAJ&pg=RA1-PA99&lpg=RA1-PA99&dq=chieu+lac+soc+16&source=bl&ots=sI9Fcz5tw_&sig=ACfU3U2DW7_ML79qtNX-EJuHRF7EwGzU2w&hl=en&sa=X&ved=2ahUKEwjO_-rBsMWHAxXRv4kEHZOECIYQ6AF6BAgjEAM
+match = -218.8%%
+title = Chức vụ cung ứng Lời Tập 25 Số 1 Kì 2: Nghiên cứu kết tinh ...
+url = https://books.google.com/books?id=FeBCEAAAQBAJ&pg=PT182&lpg=PT182&dq=chieu+lac+soc+16&source=bl&ots=aHacyO4gsa&sig=ACfU3U0P8dWxks6T9fpnE6wihGNV0yDNtg&hl=en&sa=X&ved=2ahUKEwigiJieuMWHAxWSODQIHarQDhAQ6AF6BAgpEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
