--- a/images/nem-pyeoda-thuong-16/config.ini
+++ b/images/nem-pyeoda-thuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-16.html
 lastopen = 2024-06-18 17:43:07
 
 [search]
-lastsearch = 2024-07-27 01:49:20
+lastsearch = 2024-07-27 02:32:33
 
 [changagoidemtamhao.com]
-match = -10.0%%
-title = Đệm PYEODA
-url = https://changagoidemtamhao.com/dem-pyeoda
+match = -5.0%%
+title = Bộ Chăn Ga Gối PYEODA LTT
+url = https://changagoidemtamhao.com/bo-chan-ga-goi-pyeoda-ltt
 
 [demsingapore.com]
 match = -70.0%%
@@ -19,7 +19,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-16.htm
 [demxanh.com]
 match = -100.0%%
 title = Ga gối chun chần Tencel Pyeoda Hàn Quốc đa sắc 3 món 16
-url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html?srsltid=AfmBOootbKb4L2uDfjgAB5rMLagoDZBBzHuoua_eQ5Wud1-MUXjup26M
+url = https://demxanh.com/ga-goi-chun-chan-tencel-pyeoda-han-quoc-da-sac-3-mon-16.html
 
 [www.facebook.com]
 match = -45.0%%
