CI images update

--- a/images/chieu-dieu-hoa-khong-goi-12/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-12.html
 lastopen = 2024-06-09 23:15:39
 
 [search]
-lastsearch = 2024-07-27 01:47:44
+lastsearch = 2024-07-27 02:56:30
 
 [demxanh.com]
 match = 14.8%%
 title = Sử dụng chiếu điều hòa có tốt hay không?
-url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html?srsltid=AfmBOopV4XWwgzAuedtCwczOGOqGvpoaUvHLzO5JK7x1q69Iv2MdvCAG
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [shopee.vn]
 match = 0.0%%
