--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-07-27 01:58:40
+lastsearch = 2024-07-27 02:54:23
 
 [everon.online]
 match = 19.2%%
@@ -39,7 +39,7 @@ url = https://www.tiktok.com/discover/hoangtuetam
 [books.google.com]
 match = -103.8%%
 title = Roster, Legislatures of Hawaii, 1841-1918: Constitutions of ...
-url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVQHlFZy&sig=ACfU3U0co5CJpTwdlr6sGwjWVTmU35Ufpw&hl=en&sa=X&ved=2ahUKEwjZh_fLscWHAxXgkYkEHUtgDZ4Q6AF6BAgXEAM
+url = https://books.google.com/books?id=FHTf1B3ypPQC&pg=PT5&lpg=PT5&dq=bo+bon+mua+chun+chan+1602m&source=bl&ots=zGiVQHoI1B&sig=ACfU3U2a1fgs4gBKvIqVUPnoL5VL007yvQ&hl=en&sa=X&ved=2ahUKEwjDrYCGvsWHAxU_mokEHYE-DKAQ6AF6BAgZEAM
 
 [everonchinhhang.vn]
 match = -19.2%%
