--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-27 01:36:53
+lastsearch = 2024-07-27 02:52:40
 
 [everon.online]
 match = 50.0%%
@@ -14,7 +14,7 @@ url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-
 [everonvn.com.vn]
 match = -4.3%%
 title = Bộ chăn ga Everon SR-16
-url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16?srsltid=AfmBOoq3RvatGVsTDU5n7OQsVSMp_Ok4pc6C1k2jWqpBkFxfTY2KHE-5
+url = https://everonvn.com.vn/everon/2248/bo-chan-ga-everon-sr-16
 
 [tiki.vn]
 match = 29.4%%
@@ -84,7 +84,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
 [demxanh.com]
 match = -2.9%%
 title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html?srsltid=AfmBOortRk0QCs64PFK-GwRoweS-LjiRRs5lgn8CYt_kYL3DcSne_bwl
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html
 
 [antbedding.com]
 match = 26.5%%
