--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-27 00:14:00
+lastsearch = 2024-07-27 02:46:27
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = Can HOA come onto my property?
 url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
-match = -176.5%%
-title = What can I do when a Homeowner's Association pops up in ...
-url = https://www.quora.com/What-can-I-do-when-a-Homeowners-Association-pops-up-in-my-neighborhood-I-purchased-my-home-years-ago-and-I-specifically-wanted-somewhere-that-a-HOA-didnt-exist-Is-my-only-option-to-move-The-rules-have-already-been
+match = -217.6%%
+title = If I already live in a neighborhood, and HOA tries to claim it ...
+url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -82,9 +82,9 @@ title =
 url = https://www.cedarmanagementgroup.com/south-carolina-hoa-complaints/
 
 [www.hopb.co]
-match = -170.6%%
-title = What About the Children? HOA Age Restrictions and FHA ...
-url = https://www.hopb.co/blog/what-about-the-children-hoa-age-restrictions-and-fha-proscriptions
+match = -135.3%%
+title = Virginia HOA Laws, Rules, Resources & Information
+url = https://www.hopb.co/virginia
 
 [www.deanmead.com]
 match = 0.0%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -82.4%%
-title = I need advice #lawyer #hoa #taylorswift
-url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
+match = -152.9%%
+title = Trap has been set 💀 #hoa #deliveryheroes #surprise | hoa
+url = https://www.tiktok.com/@koltindarley/video/7359287495458295086?lang=en
 
 [www.21alivenews.com]
 match = -123.5%%
