--- a/images/man-tu-bung-20-22/config.ini
+++ b/images/man-tu-bung-20-22/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/man-tu-bung-20-22.html
 lastopen = 2024-06-09 23:31:04
 
 [search]
-lastsearch = 2024-07-26 23:43:08
+lastsearch = 2024-07-27 02:46:08
 
 [www.bible.com]
-match = -88.2%%
-title = LUKA 22 | MIZCLBSI Bible | YouVersion
-url = https://www.bible.com/bible/1048/LUK.22.MIZCLBSI
+match = -100.0%%
+title = MATHAIA 22 | MIZCLBSI Bible | YouVersion
+url = https://www.bible.com/bible/1048/MAT.22.MIZCLBSI
 
 [mizobibleblog.wordpress.com]
-match = -111.8%%
-title = Exodus 1-40 - Mizo BIBle - WordPress.com
-url = https://mizobibleblog.wordpress.com/2017/02/24/exodus-1-40/
+match = -123.5%%
+title = Thufingte 1-31 - Mizo BIBle - WordPress.com
+url = https://mizobibleblog.wordpress.com/2017/02/26/thufingte-1-31/
 
 [www.biblegateway.com]
 match = -82.4%%
@@ -32,9 +32,9 @@ title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
 url = https://munghoangphat.com/
 
 [www.churchofjesuschrist.org]
-match = -205.9%%
-title = 1 Nifai 18 - The Church of Jesus Christ of Latter-day Saints
-url = https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/18?lang=tpi
+match = -200.0%%
+title = 3 Nifai 5 - The Church of Jesus Christ of Latter-day Saints
+url = https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=tpi
 
 [scert.mizoram.gov.in]
 match = -18.2%%
@@ -47,8 +47,8 @@ title = Air Fittings & Tubing
 url = https://www.smcpneumatics.com/pdfs/smc/70AIFITTINGS.pdf
 
 [www.bibleref.com]
-match = 0.0%%
-title = 
+match = -23.5%%
+title = What does Matthew 20:22 mean?
 url = https://www.bibleref.com/Matthew/20/Matthew-20-22.html
 
 [www.youtube.com]
