--- a/images/vo-goi-bears-45x65/config.ini
+++ b/images/vo-goi-bears-45x65/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/vo-goi-bears-45x65.html
 lastopen = 2024-07-01 17:35:59
 
 [search]
-lastsearch = 2024-07-26 21:37:57
+lastsearch = 2024-07-27 02:54:02
 
 [everonvn.com.vn]
-match = -11.1%%
-title = Bộ Everon Ep1831 - Curtis
-url = https://everonvn.com.vn/everon/630/bo-everon-ep1831
+match = -55.6%%
+title = Vỏ gối đầu Everon Hotgirl giảm giá 30%%
+url = https://everonvn.com.vn/everon/2093/vo-goi-everon-hotgirl?srsltid=AfmBOopf2cKfVYjf9dJYAbtbWnWrz82COYdw9oxIqy-6NLEOyLrDEBE7
 
 [www.lazada.vn]
 match = -161.1%%
 title = Hoạt động♀Chất lượng cao Vỏ gối bông 45x65 etami, mềm mại ...
-url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1
+url = https://www.lazada.vn/products/hoat-dongchat-luong-cao-vo-goi-bong-45x65-etami-mem-mai-va-min-mang-thiet-ke-i2641874444-s12892934652.html?from_gmc=1&fl_tag=1&srsltid=AfmBOopNf5Ar1NHg0nmHsqFeTOnrqEaU3PyjspGrAfg6-hl0syngfePf
 
 [www.reddit.com]
 match = -150.0%%
@@ -34,17 +34,17 @@ url = https://muathongminh.vn/xu-huong-vo-goi-dau-cotton-poly-45x65-ao-goi-nam-n
 [www.diepxuan.com]
 match = 5.6%%
 title = Vỏ gối kê xoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html
+url = https://www.diepxuan.com/vo-goi-ke-xoa-45x65.html?srsltid=AfmBOooZmux2ZpLB-v6blLsW2O2Mbvxv_T_NK-QmWQPTtrkvnf4OLXec
 
 [www.everonqb.com]
-match = -111.1%%
-title = Vỏ gối EPC21054 45x65 - Everon Quảng Bình Trang Chủ
-url = https://www.everonqb.com/vo-goi-epc21054-45x65.html
+match = -100.0%%
+title = Vỏ gối ES1707 45x65 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-es1707-45x65.html
 
 [shopee.vn]
-match = -161.1%%
-title = Vỏ gối nằm kích thước 45*65 chất liệu cotton không nhăn ...
-url = https://shopee.vn/Vỏ-gối-nằm-kích-thước-45*65-chất-liệu-cotton-không-nhăn-thấm-hút-mồ-hôi-i.183173468.17139570248
+match = -127.8%%
+title = GA TRẦN BỌC NỆM THÊU GẤU TEDDY XINH XẮN ĐỦ 3size
+url = https://shopee.vn/product/146440345/13756241998?gsht=StznoKFCWptXK5Vt
 
 [sieuthicholon.com]
 match = -138.9%%
