--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-07-27 02:24:30
+lastsearch = 2024-07-27 03:17:22
 
 [everonvn.com.vn]
-match = 7.4%%
-title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia
+match = -74.1%%
+title = Bảng giá bán bộ chăn ga gối Hàn Quốc Everon Epc-19041 in ...
+url = https://everonvn.com.vn/everon/750/bo-everon-epc-19041
 
 [everon.com.vn]
 match = 40.0%%
