--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-27 00:35:49
+lastsearch = 2024-07-27 03:22:46
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDI-p1i&sig=ACfU3U06Qw4UrpcGEv585Xx_xtdt3ZVu_A&hl=en&sa=X&ved=2ahUKEwiU79KJn8WHAxXCFlkFHaBYD88Q6AF6BAg_EAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDJ-p3f&sig=ACfU3U064RrzyXjv61DhqBh6rk6oVAqYWQ&hl=en&sa=X&ved=2ahUKEwiHsv2xxMWHAxXVL1kFHXFVBkQQ6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
