--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-27 00:40:21
+lastsearch = 2024-07-27 03:16:21
 
 [www.instagram.com]
-match = -123.1%%
-title = Chan Dior Sunshade (@chan_dior_sunshade)
-url = https://www.instagram.com/chan_dior_sunshade/
+match = -176.9%%
+title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
+url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
 
 [hk.linkedin.com]
-match = -215.4%%
-title = Vincy Chan - Christian Dior高級時裝公司
-url = https://hk.linkedin.com/in/vincy-chan-982992221
+match = -100.0%%
+title = Hoi Yee Ng - Christian Dior Couture
+url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
 
 [wwd.com]
 match = -253.8%%
@@ -127,9 +127,9 @@ title = 90+ "Hoi-yee" profiles
 url = https://www.linkedin.com/pub/dir/Hoi-yee/+/hk-0-Hong-Kong
 
 [www.ebay.com]
-match = -292.3%%
-title = Dr.Slump Arale-Chan Hoi Buggy Plastic Model Vintage Unused ...
-url = https://www.ebay.com/itm/166814107991?chn=ps&mkevt=1&mkcid=28
+match = -192.3%%
+title = Tang Hoi Moon Kee Chan Pui Ying Che ... - eBay
+url = https://www.ebay.com/itm/144457828192
 
 [depositphotos.com]
 match = -246.2%%
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
@@ -330,4 +330,9 @@ url = https://huntvintage.co/seating/lounge-chairs/pair-of-boxer-lounge-chairs-b
 match = 0.0%%
 title = 
 url = https://fortune.com/europe/2024/06/11/lvmh-italian-dior-maker-investigation-luxury-goods-labor-exploitation-workers/
+
+[www.jobeasy.com]
+match = 23.1%%
+title = Hoi, Chun Kit
+url = https://www.jobeasy.com/buyoyo/eng/SearchByArtist.do?arrfnbr=360230
 
