--- a/images/tui-warmdream-18/config.ini
+++ b/images/tui-warmdream-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-18.html
 lastopen = 2024-06-10 00:27:15
 
 [search]
-lastsearch = 2024-07-27 01:35:29
+lastsearch = 2024-07-27 03:28:49
 
 [www.walmart.com]
 match = -162.5%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=CUQBFAvIlUU
 [m.facebook.com]
 match = 0.0%%
 title = Thiên An Stationery
-url = https://m.facebook.com/profile.php?id=100065257461640&locale=ms_MY
+url = https://m.facebook.com/profile.php?id=100065257461640&locale=fr_FR
 
 [noveltoon.vn]
 match = -100.0%%
@@ -69,7 +69,7 @@ url = https://www.instagram.com/meliahtlresorts/p/CsQkNaANnaw/
 [demxanh.com]
 match = -162.5%%
 title = Đệm bông ép 2m (2mx2m và 2mx2m2) giá bao nhiêu?
-url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html?srsltid=AfmBOopVT41zQ8oT3jQRpfmXo73jpzks-YShRG_5bs_vYuzsjN-CpD6l
+url = https://demxanh.com/dem-bong-ep-2mx2m2-200x220cm-gia-bao-nhieu.html
 
 [olm.vn]
 match = -243.8%%
