--- a/images/chan-long-muji/config.ini
+++ b/images/chan-long-muji/config.ini
@@ -64,7 +64,7 @@ url = https://tiki.vn/chan-long-tuyet-muji-sieu-mem-min-cao-cap-1-8kg-p157163129
 [www.muji.us]
 match = -7.1%%
 title = Tableware | Home
-url = https://www.muji.us/collections/tableware
+url = https://www.muji.us/collections/tableware?srsltid=AfmBOoqq5yjmUQwdEAw6t-RxuXvQcKxOy6FdnVclPSSHUGrAzKcZz6pN
 
 [xachtaynhat.com.vn]
 match = -35.7%%
@@ -104,7 +104,7 @@ url = https://www.tiktok.com/discover/Chăn-lông-muji
 [www.lazada.vn]
 match = -62.5%%
 title = Untitled
-url = https://www.lazada.vn/tag/chan-long-muji/
+url = https://www.lazada.vn/tag/chan-long-muji/?srsltid=AfmBOoo9JS4Uvm_m6iHwG72sbskzQWh5k3HqmrQM2GDse4wkCOKPpqky
 
 [sugoimart.com]
 match = -257.1%%
