--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-27 02:46:27
+lastsearch = 2024-07-27 03:29:10
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,14 +12,14 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -35.3%%
-title = Can HOA come onto my property?
-url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
+match = -176.5%%
+title = HOA President freaks out on kids using the community ...
+url = https://www.reddit.com/r/PublicFreakout/comments/1dxq9wn/hoa_president_freaks_out_on_kids_using_the/
 
 [www.quora.com]
-match = -217.6%%
-title = If I already live in a neighborhood, and HOA tries to claim it ...
-url = https://www.quora.com/If-I-already-live-in-a-neighborhood-and-HOA-tries-to-claim-it-am-I-forced-to-become-an-HOA-member
+match = -200.0%%
+title = If I buy a house, can an HOA really tell me that my friend ...
+url = https://www.quora.com/If-I-buy-a-house-can-an-HOA-really-tell-me-that-my-friend-can-t-live-with-me-because-we-re-not-blood-related
 
 [lauragoodsonart.com]
 match = 47.1%%
@@ -82,9 +82,9 @@ title =
 url = https://www.cedarmanagementgroup.com/south-carolina-hoa-complaints/
 
 [www.hopb.co]
-match = -135.3%%
-title = Virginia HOA Laws, Rules, Resources & Information
-url = https://www.hopb.co/virginia
+match = -170.6%%
+title = What About the Children? HOA Age Restrictions and FHA ...
+url = https://www.hopb.co/blog/what-about-the-children-hoa-age-restrictions-and-fha-proscriptions
 
 [www.deanmead.com]
 match = 0.0%%
@@ -262,9 +262,9 @@ title = HOA
 url = https://www.click2houston.com/topic/HOA/
 
 [www.tiktok.com]
-match = -152.9%%
-title = Trap has been set 💀 #hoa #deliveryheroes #surprise | hoa
-url = https://www.tiktok.com/@koltindarley/video/7359287495458295086?lang=en
+match = -82.4%%
+title = I need advice #lawyer #hoa #taylorswift
+url = https://www.tiktok.com/@koltindarley/video/7351825529915444522
 
 [www.21alivenews.com]
 match = -123.5%%
