CI images update

--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-07-27 01:20:41
+lastsearch = 2024-07-27 03:49:27
 
 [demxanh.com]
-match = 38.2%%
-title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
+match = 11.8%%
+title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [shopee.vn]
 match = 0.0%%
@@ -97,9 +97,9 @@ title = Chiếu điều hòa là gì? Có nên sử dụng chiếu điều hòa 
 url = https://goni.vn/chieu-dieu-hoa-la-gi-co-nen-su-dung-chieu-dieu-hoa-khong/
 
 [www.lazada.vn]
-match = 0.0%%
-title = Size 1.8x2m - Chiếu điều hòa tencel mủ cao su non Ben ...
-url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-mu-cao-su-non-ben-ben-ko-kem-vo-goi-chieu-cao-su-chieu-dieu-hoa-chieu-cao-su-non-i854756749.html
+match = 2.9%%
+title = Size 1.8x2m - Chiếu điều hòa tencel từ cao su non êm mát
+url = https://www.lazada.vn/products/size-18x2m-chieu-dieu-hoa-tencel-tu-cao-su-non-em-mat-khong-kem-vo-goi-chat-chon-mau-dang-khoa-79-chieu-dieu-hoa-cao-su-non-chieu-cao-su-chieu-tencel-chieu-mat-mua-he-i786966766.html
 
 [ru9.vn]
 match = 8.8%%
