--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-27 02:28:23
+lastsearch = 2024-07-27 03:52:12
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -67,9 +67,9 @@ title = Giữ nghề dệt chiếu Long Cang
 url = https://baolongan.vn/giu-nghe-det-chieu-long-cang-a169502.html
 
 [www.youtube.com]
-match = -106.2%%
-title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
-url = https://www.youtube.com/watch?v=D5B7MtNy_kM
+match = -162.5%%
+title = TIN CHIỀU 25/7: HUYỀN THOẠI M.U MUỐN GIỮ RASHFORD ...
+url = https://www.youtube.com/watch?v=LXqHpPenE6A
 
 [books.google.com]
 match = -218.8%%
@@ -317,9 +317,9 @@ title = Bảo Lộc: Xe cấp cứu tới điểm thi đón 2 thí sinh bị tai
 url = https://baolamdong.vn/xa-hoi/202406/bao-loc-xe-cap-cuu-toi-diem-thi-don-2-thi-sinh-bi-tai-nan-den-benh-vien-dieu-tri-ed827a4/
 
 [baochinhphu.vn]
-match = -150.0%%
-title = UBTVQH thông qua việc sắp xếp các đơn vị hành ...
-url = https://baochinhphu.vn/ubtvqh-thong-qua-viec-sap-xep-cac-don-vi-hanh-chinh-cap-huyen-cap-xa-cua-3-tinh-102240723153849837.htm
+match = -200.0%%
+title = Chống khai thác IUU: Quảng Bình cần tăng cường quản lý ...
+url = https://baochinhphu.vn/chong-khai-thac-iuu-quang-binh-can-som-giai-quyet-cac-tau-ca-3-khong-102240726200346129.htm
 
 [eva.vn]
 match = -212.5%%
@@ -587,9 +587,9 @@ title = 6 địa điểm tiêm HPV ở Đà Nẵng uy tín: Giá tiền và các
 url = https://vnvc.vn/dia-diem-tiem-hpv-o-da-nang/
 
 [media.chinhphu.vn]
-match = -106.2%%
-title = Cảnh báo giả mạo website của Tổng cục Thuế
-url = https://media.chinhphu.vn/canh-bao-gia-mao-website-cua-tong-cuc-thue-102240726150622866.htm
+match = -231.2%%
+title = Lãnh đạo các nước, các đảng, các tổ chức quốc tế chia buồn ...
+url = https://media.chinhphu.vn/lanh-dao-cac-nuoc-cac-dang-cac-to-chuc-quoc-te-chia-buon-tong-bi-thu-nguyen-phu-trong-tu-tran-102240726214318202.htm
 
 [www.quangninh.gov.vn]
 match = -193.8%%
