--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-27 00:34:02
+lastsearch = 2024-07-27 03:46:00
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,19 +12,19 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -60.9%%
-title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
-match = -26.1%%
-title = ĐỊA CHỈ MUA CHIẾU TRÚC TIN CẬY TĨNH LONG AN
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/dia-chi-mua-chieu-truc-tin-cay-tinh-long-an-55.html
+match = -13.0%%
+title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = -43.5%%
-title = Chiếu trúc tre tây Bắc cao bằng loại 1(mát lạnh mùa hè)
-url = https://shopee.vn/Chiếu-trúc-tre-tây-Bắc-cao-bằng-loại-1(mát-lạnh-mùa-hè)-i.163405403.9736911004
+match = 17.4%%
+title = Chiếu cao bằng Việt Nam 1.2m x 1.95
+url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
 
 [www.lazada.vn]
 match = 21.7%%
