--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-27 03:17:43
+lastsearch = 2024-07-27 03:56:23
 
 [chieutruc.info]
-match = -44.0%%
-title = Tổng kho chiếu trúc tre Việt Nam cao cấp chính hãng
-url = https://chieutruc.info/
+match = -60.0%%
+title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt ...
+url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -28.0%%
-title = Bảng giá chiếu trúc Cao Bằng Tây Bắc mới nhất 2021
-url = https://demxanh.com/bang-gia-chieu-truc-cao-bang-tay-bac-moi-nhat-2019.html
+match = -24.0%%
+title = [Hot] Bảng giá Chiếu trúc khuyến mãi 2023
+url = https://demxanh.com/bang-gia-chieu-truc-2018.html
 
 [shopee.vn]
 match = -64.0%%
@@ -200,4 +200,14 @@ url = https://baocaobang.vn/trai-ngot-tu-dam-me-vo-thuat-3170865.html
 match = 20.0%%
 title = Hội Nông dân tỉnh Cao Bằng
 url = https://hoinongdan.caobang.gov.vn/
+
+[soxaydung.caobang.gov.vn]
+match = 20.0%%
+title = Sở Xây dựng tỉnh Cao Bằng
+url = https://soxaydung.caobang.gov.vn/
+
+[baochinhphu.vn]
+match = -80.0%%
+title = Cao Bằng cần hành động quyết liệt để 'vượt mức không ai ...
+url = https://baochinhphu.vn/cao-bang-can-hanh-dong-quyet-liet-de-vuot-muc-khong-ai-bang-102240610195122538.htm
 
