--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-27 01:26:01
+lastsearch = 2024-07-27 03:46:21
 
 [shopee.vn]
 match = -36.8%%
@@ -62,9 +62,9 @@ title = CHIẾU TRE , CHIẾU TRÚC MẮT NHỎ HẠT VÀNG DÒNG ...
 url = https://www.lazada.vn/products/chieu-tre-chieu-truc-mat-nho-hat-vang-dong-cao-cap-du-kich-thuoc-i251143269.html
 
 [tiki.vn]
-match = -126.3%%
-title = Đồ chơi trẻ em thông minh hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=đồ chơi trẻ em thông minh
+match = -110.5%%
+title = Chiếu tre hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu tre
 
 [khodem.vn]
 match = 31.6%%
