--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-07-27 03:35:46
+lastsearch = 2024-07-27 03:45:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -14,12 +14,12 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOor4IlHTS3VoA7O2AkmCUV5Wm80-OlvkPnHlSK1ozM7C76LYLdD7
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoqRVulR_VfxOsXsTA6OtOE0G6Z8HGikag_E_jpj373Vc3Xqz5M-
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [tiki.vn]
 match = -42.9%%
