--- a/images/goi-vuong-dreamland-45x45/config.ini
+++ b/images/goi-vuong-dreamland-45x45/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/goi-vuong-dreamland-45x45.html
 lastopen = 2024-06-06 16:45:16
 
 [search]
-lastsearch = 2024-07-27 03:36:07
+lastsearch = 2024-07-27 03:45:41
 
 [dreamland.vn]
-match = -32.0%%
-title = Dreamland chuyên chăn ga gối đệm cao cấp
-url = http://dreamland.vn/Solid-AB45--(Vo-Chan-Dong)-i4079.html
+match = -64.0%%
+title = Cotton lụa PT08 - Chăn ga gối đệm cao cấp Dreamland
+url = http://dreamland.vn/Cotton-lua-PT08-i4052.html
 
 [demxanh.com]
 match = -24.0%%
-title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M07
-url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m07.html
+title = Chăn ga gối cưới Perfect 6 món màu đỏ P6M04
+url = https://demxanh.com/chan-ga-goi-cuoi-perfect-6-mon-mau-do-p6m04.html
 
 [www.diepxuan.com]
 match = 48.0%%
