--- a/images/man-tu-bung-dinh-vuong-16/config.ini
+++ b/images/man-tu-bung-dinh-vuong-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong-16.html
 lastopen = 2024-06-06 16:41:48
 
 [search]
-lastsearch = 2024-07-27 03:23:09
+lastsearch = 2024-07-27 03:55:22
 
 [munghoangphat.com]
-match = 12.0%%
-title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
-url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
+match = 48.0%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [tiki.vn]
 match = -28.0%%
@@ -17,14 +17,14 @@ title = Màn bung 16m có đáy hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=màn bung 16m có đáy
 
 [shopee.vn]
-match = -28.0%%
-title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=màn chụp vuông
+match = -36.0%%
+title = Mùng chụp tự bung đỉnh vuông cao cấp khóa to mắt dày ...
+url = https://shopee.vn/Mùng-chụp-tự-bung-đỉnh-vuông-cao-cấp-khóa-to-mắt-dày-dặn-màn-chụp-xếp-gọn-nhiều-size-i.116277580.6522803157
 
 [www.mungbaobao.com]
-match = 48.0%%
-title = Mùng Chụp Tự Bung Đỉnh Vuông 1m6 x 2m
-url = https://www.mungbaobao.com/mung-chup-tu-bung-dinh-rong-1m6-x-2m-bao-bao.html
+match = -32.0%%
+title = Mùng Bảo Bảo | Mùng Chụp Tự Bung Đỉnh Vuông Giá tốt 2024
+url = https://www.mungbaobao.com/
 
 [www.diepxuan.com]
 match = 100.0%%
