--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-27 03:24:12
+lastsearch = 2024-07-27 03:51:51
 
 [everon.vip]
-match = 44.4%%
-title = Nệm Everon Ceramic
-url = https://everon.vip/nem-everon-ceramic
+match = -10.0%%
+title = NỆM EVERON
+url = https://everon.vip/nem
 
 [everonvn.com.vn]
 match = 23.8%%
@@ -59,7 +59,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m6.html
 [everon.com.vn]
 match = -114.3%%
 title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/size/160-x-200/?srsltid=AfmBOoo_hl4wieQk36e0FKog8ADmc03-k2usMjw-jd2KxGZpgkglpMJG
+url = https://everon.com.vn/size/160-x-200/
 
 [demxanh.com]
 match = -128.6%%
