--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-27 01:28:56
+lastsearch = 2024-07-27 04:53:58
 
 [en.wikipedia.org]
-match = 15.0%%
-title = Timeline of Korean history
-url = https://en.wikipedia.org/wiki/Timeline_of_Korean_history
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [peacehistory-usfp.org]
 match = -45.0%%
@@ -82,9 +82,9 @@ title =
 url = https://www.icmec.org/wp-content/uploads/2019/01/ICMEC-South-Korea-National-Legislation-updated.pdf
 
 [cryptonews.com]
-match = -140.0%%
-title = WazirX Hacker Converts Majority of Stolen Assets into Ether
-url = https://cryptonews.com/news/wazirx-hacker-converts-majority-of-stolen-assets-into-ether.htm
+match = -145.0%%
+title = South Korean 'Crypto Fraudsters' 'Duped Financier Out of ...
+url = https://cryptonews.com/news/south-korean-crypto-fraudsters-duped-financier-out-of-4-1m.htm
 
 [www.thespike.gg]
 match = -85.0%%
@@ -132,14 +132,14 @@ title =
 url = https://www.gn.go.kr/entour/sub05_04_08.do
 
 [www.reddit.com]
-match = -85.0%%
-title = Legal adult age in Korea is 19, not 18 : r/kpoprants
-url = https://www.reddit.com/r/kpoprants/comments/x4x0uh/legal_adult_age_in_korea_is_19_not_18/
+match = -120.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [timesofindia.indiatimes.com]
-match = -115.0%%
-title = Times of India: News - Latest News, Breaking News ...
-url = https://timesofindia.indiatimes.com/
+match = -120.0%%
+title = Korean Olympic fencer Nam Hyun Hee's ex-fiancé made ...
+url = https://timesofindia.indiatimes.com/entertainment/k-pop/music/news/korean-olympic-fencer-nam-hyun-hees-ex-fianc-made-deceitful-claims-of-dating-iu-report/articleshow/107135210.cms
 
 [www.riotgames.com]
 match = -125.0%%
@@ -162,9 +162,9 @@ title = Naval Forces Korea - Navy.mil
 url = https://cnrk.cnic.navy.mil/
 
 [books.google.com]
-match = -115.0%%
-title = Japan Weekly Mail - Page 194 - Google Books Result
-url = https://books.google.com/books?id=QyVCAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=_sniNQL6ms&sig=ACfU3U2iQya7J2yJb5hiV2LR1StBPtt4Bg&hl=en&sa=X&ved=2ahUKEwjN-_GrzoaHAxXkCDQIHbvlDFYQ6AF6BAgaEAM
+match = -180.0%%
+title = The Japan Daily Mail - Volume 34 - Page 194 - Google Books Result
+url = https://books.google.com/books?id=Zm0zAQAAMAAJ&pg=PA194&lpg=PA194&dq=ruot+nem+korea+9f+18&source=bl&ots=38NC7UrpOp&sig=ACfU3U3eAlIg2I3AJx11KlyOHpqWbfKwaA&hl=en&sa=X&ved=2ahUKEwi-6Lfj2MWHAxW4jIkEHanXCfYQ6AF6BAgcEAM
 
 [strandedonpeel.my-free.website]
 match = -45.0%%
@@ -465,4 +465,24 @@ url = https://valorantzone.gg/noticia/valorant-champions-grupos-estao-definidos/
 match = -130.0%%
 title = The US Didn't Bring Freedom to South Korea — Its People ...
 url = https://jacobin.com/2020/06/gwangju-uprising-korean-war-seventieth-anniversary
+
+[www.thanh-binh.fr]
+match = -100.0%%
+title = Nem chua leaf Oriental Kitchen 300g - deli asian
+url = https://www.thanh-binh.fr/gb/fresh-salted-caterers/2349-nem-chua-tam-ruot-oriental-kitchen-300g-france-3447574603102.html
+
+[en.yna.co.kr]
+match = -155.0%%
+title = Heads of S. Korea's top-10 biz groups received 540.5 bln ...
+url = https://en.yna.co.kr/view/AEN20180218002800320
+
+[koreanbuilds.net]
+match = -130.0%%
+title = Olaf Builds 14.14 - Best Korean Builds | Koreanbuilds.net
+url = https://koreanbuilds.net/champion/Olaf
+
+[wanderingchopsticks.blogspot.com]
+match = -65.0%%
+title = Mam Ruoc (Vietnamese Fermented Shrimp Paste)
+url = http://wanderingchopsticks.blogspot.com/2008/10/mam-ruoc-vietnamese-fermented-shrimp.html
 
