--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,32 +4,32 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-07-27 01:33:32
+lastsearch = 2024-07-27 04:49:41
 
 [www.lazada.vn]
 match = -193.3%%
 title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOopt5JWdWpuxQbagKPcrLs_ei_DKycldf2HgSgMOknchkVjy-V3C
 
 [shopee.vn]
-match = -213.3%%
-title = Vỏ gối vuông tựa lưng, vỏ gối sofa, gối ôm hoa văn Tây Âu ...
-url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-vỏ-gối-sofa-gối-ôm-hoa-văn-Tây-Âu-48cmx48cm-chất-liệu-gấm-nhung-thêu-gối-vuông-trang-trí-decor-i.18055727.9543459471
+match = -100.0%%
+title = Vỏ gối vuông tựa lưng vải nhung 45cmx45cm ...
+url = https://shopee.vn/Vỏ-gối-vuông-tựa-lưng-vải-nhung-45cmx45cm-vỏ-gối-ôm-vỏ-gối-vuông-sofa-vỏ-gối-vuông-trang-trí-quán-cafe-có-khóa-kéo-i.30819657.3861605503
 
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOopfKDI-bm_SVQs3Myy5JucGVLmbxyo_9AKPc_omON9wOwe2MzyH
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/
+url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOooGmpJUgHHAsnTKya6MnTvmO0sLDNoPDOvmct5_DXWXJlPSPmcd
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOorqyjE6gI7ZpntGuC26LCpkraXLIE79eKVK2U9N_C5oo0F5FWXJ
 
 [lepetit.com.vn]
 match = -6.7%%
@@ -49,7 +49,7 @@ url = https://tiki.vn/search?q=vở gối vuông cho bé
 [everonvn.com.vn]
 match = 20.0%%
 title = Ruột Gối Tựa Everon
-url = https://everonvn.com.vn/everon/116/ruot-goi-tua
+url = https://everonvn.com.vn/everon/116/ruot-goi-tua?srsltid=AfmBOopEd_HjpeLiEqUHWteuqaw122Vrc8soDA6e8D_LAeXz6eu3NmyS
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -155,4 +155,9 @@ url = https://www.tiktok.com/discover/fish-sauce-in-tagalog
 match = -146.7%%
 title = nhan dinh uc - Lãnh đạo về giải pháp công nghệ
 url = https://cucthongke.quangtri.gov.vn/article/ezH/nhan dinh uc
+
+[juliabedding.com]
+match = -160.0%%
+title = Ruột gối vuông ép hơi gòn bi Hàn Quốc - juliangahoang
+url = https://juliabedding.com/san-pham/ruot-goi-vuong-ep-hoi-gon-bi-han-quoc/
 
