--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-27 03:16:21
+lastsearch = 2024-07-27 04:46:16
 
 [www.instagram.com]
-match = -176.9%%
-title = HArris CHan | My first dior saddle bagggg. 🎅🏽🧝🏻 ...
-url = https://www.instagram.com/_harris_chan_/p/Cz3dzHtyRjX/
+match = -123.1%%
+title = Chan Dior Sunshade (@chan_dior_sunshade)
+url = https://www.instagram.com/chan_dior_sunshade/
 
 [hk.linkedin.com]
-match = -100.0%%
-title = Hoi Yee Ng - Christian Dior Couture
-url = https://hk.linkedin.com/in/hoi-yee-ng-662733106
+match = -276.9%%
+title = Chow hoi ting Chow - Christian Dior高級時裝公司
+url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
 match = -253.8%%
