--- a/images/man-ren-14/config.ini
+++ b/images/man-ren-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-14.html
 lastopen = 2024-06-06 17:06:44
 
 [search]
-lastsearch = 2024-07-27 03:47:07
+lastsearch = 2024-07-27 04:51:10
 
 [www.youtube.com]
 match = -420.0%%
@@ -37,9 +37,9 @@ title = Ren 14 🏴󠁧󠁢󠁥󠁮󠁧󠁿 🏴󠁧󠁢󠁷󠁬󠁳󠁿slice of
 url = https://twitter.com/ScottRen14/status/1787896938110820854
 
 [www.facebook.com]
-match = -400.0%%
-title = AcuPro Academy - Ren 14 (CV 14) located 6 cun above the...
-url = https://www.facebook.com/AcuProAcademy/posts/ren-14-cv-14-located-6-cun-above-the-navel-is-the-front-mu-point-of-the-heart-wh/1547299788744965/
+match = 0.0%%
+title = 
+url = https://www.facebook.com/vuimedu/videos/one-of-the-most-powerful-acupuncture-points-is-yintang-located-on-our-third-eye-/3086873844866489/
 
 [books.google.com]
 match = -460.0%%
