--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-07-27 00:53:40
+lastsearch = 2024-07-27 05:00:57
 
 [quizlet.com]
 match = -170.0%%
@@ -54,7 +54,7 @@ url = https://en.wikipedia.org/wiki/Ren_Gill
 [books.google.com]
 match = -430.0%%
 title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiIJpk5&sig=ACfU3U15FixQsPnc0ZUEQM6od5D7CUw5fw&hl=en&sa=X&ved=2ahUKEwjzmrOIo8WHAxXnv4kEHZxaCsUQ6AF6BAgXEAM
+url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgiKEnnc&sig=ACfU3U0QDRqG-wgXJNMZPCMbqcIJPnjqvA&hl=en&sa=X&ved=2ahUKEwjIn4Wr2sWHAxWsrYkEHevzB58Q6AF6BAgcEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
