--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-07-27 03:23:30
+lastsearch = 2024-07-27 04:55:02
 
 [demdreamland.vn]
 match = 25.6%%
@@ -14,7 +14,7 @@ url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 [demxanh.com]
 match = 18.6%%
 title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html?srsltid=AfmBOopiGTgLH5xuQ4sFgZEIftVMP-tmXVNIOslrQNJcwqwmDu_edt2-
 
 [www.diepxuan.com]
 match = -277.8%%
@@ -29,7 +29,7 @@ url = http://dreamland.vn/Dem-cao-su-Thien-Nhien-Hoang-Gia---16cm-i4417.html
 [demviethome.vn]
 match = 7.0%%
 title = Đệm cao su Kim Cương princess diamond luxury giá rẻ hà ...
-url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/
+url = https://demviethome.vn/dem-cao-su-kim-cuong-princess-diamond-luxury/?srsltid=AfmBOor_Mi1MJ6EFh3jVBrTgluovr4p_QKEKcF016fZ7G0F3QTfVGFh_
 
 [thegioidemdep.com]
 match = 7.0%%
