--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-27 02:41:14
+lastsearch = 2024-07-27 04:45:10
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOoruoS_R-w6BuCjMYGwE4K28eguGnU2l49ZFUyc_MPxdQmcJ-zTI
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOoq7Yt0g265OnVzqPyIBWQ_gVUoqY0fZDDwwxTOrf4RygxiK4JLc
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOorgPE5sLfOVIpUcQJgBiFKKmljNOjPAPXGvfA5XJhNtvJnwo3YJ
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -104,12 +104,12 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOopkd3TkSF1qm0pKNlWYdTlGGorESBrLQMZe53qqgcgRk3ZvKOsM
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOooENtpXYRBknwK5lZrBp6E1wAyC1JR8v3t8UMuY5vHIu9_2HYyy
 
 [theonenoithat.com]
 match = -30.0%%
@@ -239,7 +239,7 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOorfoTRm5KTqbmVL_LyOnF_NYSoJhKaH1oPvTF3avSM1PXPo8qu6
 
 [giuonggapvietnhat.vn]
 match = -50.0%%
