CI images update

--- a/images/chieu-lac-d2-10/config.ini
+++ b/images/chieu-lac-d2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-10.html
 lastopen = 2024-06-21 02:07:26
 
 [search]
-lastsearch = 2024-07-27 04:54:40
+lastsearch = 2024-07-27 05:29:41
 
 [zhangbrickshop.com]
 match = -133.3
@@ -92,9 +92,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://www.vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.diepxuan.com]
-match = 20.0%%
-title = Chiếu lác D2 10 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-lac-d2-10.html
+match = 33.3%%
+title = Điệp Xuân Chiếu lác D2 10
+url = https://www.diepxuan.com/chieu-lac-d2-10.html?srsltid=AfmBOorgJXKC1aMfsnnahv6TMJO5RO7y6AoLnTfXrthUPaZFCwN4aVJM
 
 [visana.vn]
 match = -240.0%%
@@ -107,9 +107,9 @@ title = Cách giải bài tập Sai số các đại lượng vật lí trong th
 url = https://vietjack.com/vat-ly-lop-12/sai-so-cac-dai-luong-vat-li-trong-thi-nghiem-dao-dong-dieu-hoa.jsp
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = -80.0%%
+title = Rạp Chiếu Phim Cũ | Ho Chi Minh City
+url = https://www.facebook.com/phimhaygiare/
 
 [hoc247.vn]
 match = -213.3%%
@@ -134,7 +134,7 @@ url = https://katinat.vn/cua-hang-2/
 [bibomart.com.vn]
 match = -13.3%%
 title = BioAmicus Vitamin D3K2
-url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html
+url = https://bibomart.com.vn/bioamicus-vitamin-d3k2.html?srsltid=AfmBOorE-9xZhkRtFCPF1Yt68vGez8qY9c50q2o75-kjSebJqFi4Ltmf
 
 [www.nhathuocankhang.com]
 match = -220.0%%
@@ -364,7 +364,7 @@ url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/
 [vattumientay.com]
 match = -166.7%%
 title = Phe Gài Trục Thép D210 DIN 471 | vattumientay.com
-url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html
+url = https://vattumientay.com/phe-gai-truc-thep-d210-din-471.p-5424.html?srsltid=AfmBOoqJIj9f6MPdeJvFp36_vu4JE_8oQP_RpUh8MNInbcqENXhlITHG
 
 [mn-pvinh.tphue.thuathienhue.edu.vn]
 match = -126.7%%
