--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-27 03:22:46
+lastsearch = 2024-07-27 05:23:47
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDJ-p3f&sig=ACfU3U064RrzyXjv61DhqBh6rk6oVAqYWQ&hl=en&sa=X&ved=2ahUKEwiHsv2xxMWHAxXVL1kFHXFVBkQQ6AF6BAgaEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWDKYs-h&sig=ACfU3U2VYKTBU-eXJOmVjJUbYq5yIDQhEw&hl=en&sa=X&ved=2ahUKEwjz9su438WHAxVaHjQIHY69Dk8Q6AF6BAg9EAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -211.8%%
-title = Does JYP allow his artists to write down their own songs or ...
-url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
+match = -129.4%%
+title = Does KQ Entertainment treat their idols well?
+url = https://www.quora.com/Does-KQ-Entertainment-treat-their-idols-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -250,4 +250,9 @@ url = https://www.sweetwater.com/store/detail/K12--qsc-k12-1000w-12-inch-powered
 match = -41.2%%
 title = Kpop Nickname - Haus-Umbau.org
 url = https://gvac.haus-umbau.eu/kpop-nickname.html
+
+[www.science.org]
+match = -205.9%%
+title = Fast topological pumps via quantum metric engineering on ...
+url = https://www.science.org/doi/abs/10.1126/sciadv.adn5028?af=R
 
