--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-27 00:27:10
+lastsearch = 2024-07-27 05:22:26
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = 3 Yếu tố giúp cây hoa Mộc hương phát triển nhanh cây khoẻ ...
-url = https://www.youtube.com/watch?v=ASsdVo0WBew
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -255,4 +255,9 @@ url = https://m.kati.net/file/down.do?path=/board/2021/11/&fileName=(본문)+202
 match = 15.8%%
 title = Giam Doc Ha Noi | PDF
 url = https://www.scribd.com/document/673940394/giam-doc-ha-noi
+
+[truyenyy.pro]
+match = -121.1%%
+title = Chương 344 - Trọng Sinh 2000, Thanh Mai Giáo Hoa 18 ...
+url = https://truyenyy.pro/truyen/trong-sinh-2000-thanh-mai-giao-hoa-18-tuoi/chuong-344.html
 
