--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-27 01:27:07
+lastsearch = 2024-07-27 05:22:04
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -47,9 +47,9 @@ title = https://www.google.com/maps/@10.8519007,106.629377...
 url = https://www.google.com/maps/@10.8519007,106.6293774,16.92z?hl=vi-VN
 
 [www.youtube.com]
-match = -260.0%%
-title = Đẩy Class D gửi A. Trọng : Mẫu đẩy mới nhỏ gọn Lx acoustic ...
-url = https://www.youtube.com/watch?v=5-NEOUHSoGQ
+match = -173.3%%
+title = REHEARSAL | RISE AND SHINE | ELITE CHAMPIONS 2024
+url = https://www.youtube.com/watch?v=QDZ8BPEO8Ko
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -86.7%%
-title = PHOTOTIMEVietnam | Ho Chi Minh City
-url = https://www.facebook.com/phototimevn/
+match = 0.0%%
+title = Black Kingdom - D2
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=ta_IN
 
 [lacvietauction.vn]
 match = -80.0%%
