--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-27 04:49:22
+lastsearch = 2024-07-27 05:25:53
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -64.0%%
-title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
+match = -36.0%%
+title = Ga giường thăng lợi 160*200 hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=ga giường thăng lợi 160*200
 
 [nemhana.com]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-duong.html?srslt
 [www.lazada.vn]
 match = 0.0%%
 title = TXVhIELhu5kgZ2EgZ2nGsOG7n...
-url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOopv9m59E_2kmIZVWFMC4IhJOIAalUk9odMDc0VCMCgxOo3C-Nmj
+url = https://www.lazada.vn/ga-giuong/th-ng-l-i/?srsltid=AfmBOoq7Uv-7_MCLcBFmHSDparUBREBzcj3LKnykdfzcIja9GTndGIgA
 
 [nemcaosuthangloi.vn]
 match = 12.0%%
