--- a/images/ruot-chan-hoi-warmdream-200x220/config.ini
+++ b/images/ruot-chan-hoi-warmdream-200x220/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 lastopen = 2024-06-07 01:01:31
 
 [search]
-lastsearch = 2024-07-26 23:42:49
+lastsearch = 2024-07-27 05:25:13
 
 [www.dreamland.vn]
 match = 20.8%%
@@ -22,9 +22,9 @@ title = Ruột chăn hơi Warmdream 200x220
 url = https://www.diepxuan.com/ruot-chan-hoi-warmdream-200x220.html
 
 [vuanem.com]
-match = -25.8%%
-title = Ruột Chăn Mền Cao Cấp, Chăn Bông Chính Hãng Giá Rẻ ...
-url = https://vuanem.com/chan-ga-goi/ruot-chan
+match = 6.5%%
+title = Ruột chăn Hanvico có tốt không? Đánh giá ...
+url = https://vuanem.com/blog/danh-gia-ruot-chan-hanvico.html
 
 [www.instagram.com]
 match = -45.2%%
