--- a/images/tui-nem-korea-tuan-anh-16/config.ini
+++ b/images/tui-nem-korea-tuan-anh-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-16.html
 lastopen = 2024-06-17 10:42:58
 
 [search]
-lastsearch = 2024-07-27 03:34:46
+lastsearch = 2024-07-27 05:26:33
 
 [tuananh.vn]
-match = 12.0%%
-title = Đệm bông Adaptive Fiber 3M
-url = https://tuananh.vn/dem-bong-adaptive-3m-p345.html
+match = 20.8%%
+title = Đệm Bông ép 2 mảnh Korea
+url = https://tuananh.vn/dem-bong-ep-2-manh-korea--p133.html
 
 [demxanh.com]
 match = -48.0%%
@@ -37,9 +37,9 @@ title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
 url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [suongtuyet.com]
-match = 16.0%%
-title = Nệm Bông Ép Tuấn Anh Korea Cotton
-url = https://suongtuyet.com/nem-bong-ep-tuan-anh-korea-kaki
+match = -36.0%%
+title = Nệm Bông Ép Tuấn Anh Korea Vải Valize - Đà Nẵng
+url = https://suongtuyet.com/nem-bong-ep-tuan-anh-seong-san-vai-gam
 
 [www.diepxuan.com]
 match = -12.0%%
@@ -77,14 +77,14 @@ title = Đệm bông ép Tuấn Anh 2 Mảnh Korea giá rẻ hà nội. ...
 url = https://demviethome.vn/dem-bong-ep-tuan-anh-2-manh-korea/
 
 [m.facebook.com]
-match = -52.0%%
-title = Hội Người Việt Tại Busan 부산 | Cùng là miến mà ...
-url = https://m.facebook.com/groups/186406137555489/posts/427194116810022/
+match = -76.0%%
+title = Món Ngon Người Việt Houston | Các bạn ơi please giới ...
+url = https://m.facebook.com/groups/monngonnvh/posts/24721116307479699/
 
 [www.tiktok.com]
-match = -40.0%%
-title = Một hàng nộm bò khô ngon mở đêm ở khu Cầu Giấy
-url = https://www.tiktok.com/@ngdangdung/video/7285373555020139778
+match = -84.0%%
+title = Bay ơi tới lúc tui cũng có mặt tại Cửu Long, Tiêm Sa Chuỷ ...
+url = https://www.tiktok.com/@eat.withno/video/7391523861554138384
 
 [thegioidemonline.com]
 match = -36.0%%
