--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -17,9 +17,9 @@ title = NỆM CAO SU GOLDLATEX THẮNG LỢI
 url = https://khonemgiatot.vn/nem-cao-su-goldlatex-thang-loi
 
 [nemcaosuthangloi.vn]
-match = 22.7%%
-title = Nệm cao su thiên nhiên
-url = https://nemcaosuthangloi.vn/nem-cao-su-nem-cao-su-thien-nhien.html
+match = 36.7%%
+title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
+url = https://nemcaosuthangloi.vn/nem-cao-su-hoat-tinh-thang-loi.html
 
 [noithatdaithanh.vn]
 match = 36.7%%
@@ -87,9 +87,9 @@ title = bảng giá sản phẩm kymdan
 url = https://www.kymdan.com/bai-viet/bang-gia-san-pham-kymdan
 
 [vuanem.com]
-match = -6.7%%
-title = Nệm Thắng Lợi có tốt hay không? Đánh giá ...
-url = https://vuanem.com/blog/nem-thang-loi.html
+match = 13.3%%
+title = Có nên mua nệm cao su non Thắng Lợi không?
+url = https://vuanem.com/blog/co-nen-mua-nem-cao-su-non-thang-loi.html
 
 [khonemthangloi.com.vn]
 match = 56.7%%
