CI images update

--- a/images/chan-4-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-4-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:17:35
 
 [search]
-lastsearch = 2024-07-26 21:44:40
+lastsearch = 2024-07-27 06:25:06
 
 [shopee.vn]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Chăn Lông Cừu Tuyết YUKI Siêu Ấm Nặng 4kg Chính ...
 url = https://thitruongsi.com/chan-long-cuu-tuyet-yuki-sieu-am-nang-4kg-chinh-hang-men-yuki-day-min-kich-thuoc-2mx2m3-hang-xuat-nhat-gia-ib-a-2129967.html
 
 [www.youtube.com]
-match = -48.1%%
-title = TÌNH NGƯỜI DUYÊN MA - Tập 9 | Phim Thái Lan Lồng Tiếng ...
-url = https://www.youtube.com/watch?v=4XWKziKBppI
+match = -70.4%%
+title = Tổng thống Mỹ Joe Biden phát biểu về quyết định bước ngoặt ...
+url = https://www.youtube.com/watch?v=0_Udy5AFI2I
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -147,9 +147,9 @@ title = CHĂN LÔNG GẤU TUYẾT BẮC CỰC XÁM (SINGLE) - Lasante
 url = https://lasantevn.com/chan-long-gau-tuyet-bac-cuc-xam-1-mat-lasante-phap/
 
 [demxanh.com]
-match = -18.5%%
-title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+match = 11.1%%
+title = Chăn tuyết Hàn Quốc Soft 2kg kẻ hồng
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-ke-hong.html
 
 [vnvc.vn]
 match = -59.3%%
@@ -275,4 +275,9 @@ url = https://download.asic.gov.au/media/3549401/um1_16.pdf
 match = -29.6%%
 title = Android Tivi QLED 4K Casper 55 Inch 55QG8000
 url = https://dienmaycholon.com/tivi/android-tivi-qled-4k-casper-55-inch-55qg8000
+
+[nld.com.vn]
+match = 14.8%%
+title = Cơn địa chấn trên chính trường Thái Lan?
+url = https://nld.com.vn/con-dia-chan-tren-chinh-truong-thai-lan-196240617221913308.htm
 
