--- a/images/bo-bon-mua-chun-chan-140x190/config.ini
+++ b/images/bo-bon-mua-chun-chan-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-140x190.html
 lastopen = 2024-06-06 16:45:05
 
 [search]
-lastsearch = 2024-07-27 04:39:09
+lastsearch = 2024-07-27 06:16:00
 
 [www.everonvn.vn]
 match = -50.0%%
@@ -17,9 +17,9 @@ title = Chăn bốn mùa Everon chính hãng - Giảm giá tốt nhất
 url = https://everon.online/collections/chan-bon-mua-everon
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
+match = 3.6%%
+title = Chiếu gấp Đài Loan 140x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-gap-dai-loan-140x190.html
 
 [demxanh.com]
 match = -32.1%%
