--- a/images/chieu-coi-viet-thai-18/config.ini
+++ b/images/chieu-coi-viet-thai-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-coi-viet-thai-18.html
 lastopen = 2024-06-06 16:54:00
 
 [search]
-lastsearch = 2024-07-27 04:36:32
+lastsearch = 2024-07-27 06:27:35
 
 [chieutruc.info]
 match = -100.0%%
@@ -62,9 +62,9 @@ title = chieu-coi-thai-binh - Tổng kho Chiếu trúc chiếu cói rẻ nhất 
 url = http://chieu.com.vn/san-pham/chieu-coi-thai-binh-2mx2m2/chieu-coi-thai-binh/
 
 [hoanmy.com]
-match = -127.3%%
-title = Bảng cân nặng và chiều dài thai nhi từng tuần theo tiêu chuẩn ...
-url = https://hoanmy.com/bang-can-nang-thai-nhi/
+match = -77.3%%
+title = Chiều dài xương đùi thai nhi theo tuần mẹ bầu cần biết
+url = https://hoanmy.com/chieu-dai-xuong-dui-thai-nhi/
 
 [concung.com]
 match = 0.0%%
