--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-07-26 22:27:10
+lastsearch = 2024-07-27 06:20:37
 
 [vinatools.com]
 match = -206.7%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -186.7%%
-title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
-url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
+match = -280.0%%
+title = A taste of evenings at CLAY Iconic sunsets, playful cocktails ...
+url = https://www.facebook.com/claysaigon/videos/a-taste-of-evenings-at-clay-iconic-sunsets-playful-cocktails-and-dancy-vibes-wil/1485534918631479/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -157,9 +157,9 @@ title = Bò Né 2 Chị Em - Đường D2 ở TP. HCM
 url = https://www.foody.vn/ho-chi-minh/bo-ne-2-chi-em-duong-d-2
 
 [www.youtube.com]
-match = -180.0%%
-title = REHEARSAL | RISE AND SHINE | ELITE CHAMPIONS 2024
-url = https://www.youtube.com/watch?v=QDZ8BPEO8Ko
+match = -233.3%%
+title = Destiny 2 - HE’S BACK! Exiled Character Returns With A ...
+url = https://www.youtube.com/watch?v=6okaeaDT6FE
 
 [quangharvest.com]
 match = -186.7%%
@@ -172,9 +172,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [www.tiktok.com]
-match = -246.7%%
-title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
+match = -266.7%%
+title = Boost Heart Health and Strong Bones with Our Fresh and New ...
+url = https://www.tiktok.com/@lacmalaysia/video/7392531444385533191
 
 [www.lazada.vn]
 match = -146.7%%
@@ -242,9 +242,9 @@ title = 63-5174-24 HARWIN D2 2.54mm Pitch dọc 16 cách, thông qua lỗ ...
 url = https://www.axel-gl.com/vi-vn/asone/d/63-5174-24/
 
 [hcmyu.hpu2.edu.vn]
-match = -253.3%%
-title = Câu lạc bộ Bóng đá: “Sáng lên giảng đường, chiều ra sân bóng”
-url = https://hcmyu.hpu2.edu.vn/cau-lac-bo-bong-da-sang-len-giang-duong--chieu-ra-san-bong.html
+match = -220.0%%
+title = Đại hội đại biểu câu lạc bộ Trái tim đỏ nhiệm kỳ 2022 - 2023
+url = https://hcmyu.hpu2.edu.vn/dai-hoi-dai-bieu-cau-lac-bo-trai-tim-do-nhiem-ky-2022---2023.html
 
 [sxd.dongnai.gov.vn]
 match = -160.0%%
@@ -290,4 +290,24 @@ url = https://aws.amazon.com/vi/ec2/faqs/
 match = 0.0%%
 title = Mông địa Thiên To
 url = https://sienergie.fr/4291517-mông-to-địa-thiên.html
+
+[apps.dtic.mil]
+match = -253.3%%
+title = Lessons Learned, Headquarters, II Field Force Vietnam - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/AD0511158.pdf
+
+[www.psywarrior.com]
+match = -80.0%%
+title = Poetry as Propaganda in Vietnam
+url = https://www.psywarrior.com/VNPoemLeaflets.html
+
+[openjicareport.jica.go.jp]
+match = -186.7%%
+title = STUDY FOR ITS INTEGRATION PROJECT IN NORTHERN ...
+url = https://openjicareport.jica.go.jp/pdf/12246104.pdf
+
+[dam-oclc.bac-lac.gc.ca]
+match = -233.3%%
+title = Using infectious disease models to identify management ...
+url = https://dam-oclc.bac-lac.gc.ca/download?is_thesis=1&oclc_number=1252219531&id=be986810-c145-4555-8f04-972dcee228e8&fileName=Giang_Elissa_201912_Msc.pdf
 
