--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-26 20:36:46
+lastsearch = 2024-07-27 06:14:15
 
 [www.gov.uk]
 match = -200.0%%
@@ -1045,4 +1045,9 @@ url = https://www.whitehouse.gov/
 match = 0.0%%
 title = 
 url = https://www.newmarket-village.com.au/cinema
+
+[www.bestcolleges.com]
+match = 0.0%%
+title = 
+url = https://www.bestcolleges.com/schools/coe-college/
 
