--- a/images/tham-ghe-da/config.ini
+++ b/images/tham-ghe-da/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-da.html
 lastopen = 2024-06-07 00:36:37
 
 [search]
-lastsearch = 2024-07-27 00:28:51
+lastsearch = 2024-07-27 06:13:12
 
 [www.amazon.com]
 match = -309.1%%
@@ -27,9 +27,9 @@ title = BÀN GHẾ ĐÁ SÂN VƯỜN MIỀN BẮC - 0981.488.850
 url = https://ghedamienbac.com/ban-ghe-da-san-vuon/
 
 [noithathoaphat.com]
-match = -290.9%%
-title = Ghế da lãnh đạo SG936 | Ghế xoay văn phòng Hòa Phát
-url = https://noithathoaphat.com/ghe-da-lanh-dao-sg936
+match = -227.3%%
+title = SG912 Ghế xoay da lãnh đạo cấp trưởng phòng
+url = https://noithathoaphat.com/ghe-da-truong-phong-sg912
 
 [dandoxe.com]
 match = -154.5%%
