--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-27 05:21:43
+lastsearch = 2024-07-27 06:22:42
 
 [erado.vn]
 match = 0.0%%
@@ -104,12 +104,12 @@ url = https://dogothanhha.vn/san-pham/bo-giuong-ngu-co-dien-cd-18--1467&p=3
 [smlife.vn]
 match = -95.0%%
 title = Giường Ngủ Bọc Nệm Cao Cấp Eadric - 18 | SMLIFE.vn
-url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18?srsltid=AfmBOopkd3TkSF1qm0pKNlWYdTlGGorESBrLQMZe53qqgcgRk3ZvKOsM
+url = https://smlife.vn/giuong-ngu-go-tu-nhien-eadric-18
 
 [giuongbenhbaominh.vn]
 match = -95.0%%
 title = Top 10 mẫu giường xếp có nệm giá rẻ tốt nhất năm 2020
-url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat?srsltid=AfmBOooENtpXYRBknwK5lZrBp6E1wAyC1JR8v3t8UMuY5vHIu9_2HYyy
+url = https://giuongbenhbaominh.vn/giuong-xep-co-nem-gia-re-tot-nhat
 
 [theonenoithat.com]
 match = -30.0%%
