--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-27 05:19:22
+lastsearch = 2024-07-27 06:33:59
 
 [demxanh.com]
 match = -22.7%%
@@ -42,8 +42,8 @@ title = Điệp Xuân Thảm giường nỉ 120x190
 url = https://www.diepxuan.com/tham-giuong-ni-120x190.html
 
 [shopee.vn]
-match = -54.5%%
-title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN ...
+match = -81.8%%
+title = GIƯỜNG SÔ PHA ĐA NĂNG THÔNG MINH GẤP GỌN, SOFA ...
 url = https://shopee.vn/GIƯỜNG-SÔ-PHA-ĐA-NĂNG-THÔNG-MINH-GẤP-GỌN-SOFA-GIƯỜNG-GẤP-LẠI-THÀNH-GHẾ-i.795208755.19125639155
 
 [everonhanquoc.vn]
