--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-27 04:53:17
+lastsearch = 2024-07-27 06:36:43
 
 [thamaulac.com.vn]
-match = -22.2%%
-title = Thảm nỉ ghép 60x60cm trơn màu đỏ, ghi
-url = https://thamaulac.com.vn/san-pham/tham-ni-ghep-60x60cm-tron-do-ghi
+match = -88.9%%
+title = THẢM XỐP ÂU LẠC – Hàng Việt Nam chất lượng cao
+url = https://thamaulac.com.vn/
 
 [xoptraisan.info]
 match = -172.2%%
