--- a/images/tham-nhung-bali-180x230/config.ini
+++ b/images/tham-nhung-bali-180x230/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-nhung-bali-180x230.html
 lastopen = 2024-06-07 01:58:55
 
 [search]
-lastsearch = 2024-07-27 05:30:21
+lastsearch = 2024-07-27 08:03:13
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoop4-I5afEfz9mGZwmU0OU8m6cf9_eaCWv9k2aWT-sF8FQ3ufaQ
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.noithatpassion.com]
 match = -52.2%%
