--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-27 06:44:24
+lastsearch = 2024-07-27 08:06:01
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -300,4 +300,9 @@ url = https://benblan.fr/6587509-hậu-về-bệnh-caác-môn.html
 match = -25.0%%
 title = TP. Đào Viên · XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN - Coda
 url = https://coda.io/@xuatkhaulaodong/xkld-dai-loan/tp-ao-vien-13
+
+[nguyensongviet3979.blogspot.com]
+match = 8.3%%
+title = Tam Quốc Chí -Ngụy Thư 1
+url = https://nguyensongviet3979.blogspot.com/2019/12/tam-quoc-chi-tap-1-1.html
 
