--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-27 05:21:01
+lastsearch = 2024-07-27 07:56:58
 
 [www.diepxuan.com]
 match = -6.7%%
 title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+url = https://www.diepxuan.com/chieu-cay-ht-160x200.html?srsltid=AfmBOortWHZtg5dT52GNzVpO6wqwUCvf6hP-hlrWrX1meFRW7TTHbf9P
 
 [shopee.vn]
 match = -6.7%%
