--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-27 04:47:17
+lastsearch = 2024-07-27 08:09:23
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -32,9 +32,9 @@ title = 5 loại chiếu cực mát lưng cho mùa hè, được ưa chuộng ..
 url = https://www.dienmayxanh.com/kinh-nghiem-hay/5-loai-chieu-nam-mat-lim-lung-cho-mua-he-duoc-ua-1267470
 
 [chieutrucsaigon.com]
-match = 0.0%%
-title = BÁN CHIẾU TRÚC MẮT NHỎ 1M6 HƯƠNG TRÚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/ban-chieu-truc-mat-nho-1m6-huong-truc-70.html
+match = -30.4%%
+title = CHIẾU TRÚC CAO BẰNG 1M GIÁ RẺ LOẠI 1 TẠI TPHCM
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/chieu-truc-cao-bang-1m-gia-re-tai-tphcm-69.html
 
 [shopee.vn]
 match = -43.5%%
@@ -445,4 +445,9 @@ url = https://lamdong.gov.vn/sites/stttt/tintucsukien/tin-cn-dietvirus/SitePages
 match = -34.8%%
 title = Thớt Nhạc Karaoke của Thong_the | Page 14
 url = https://www.hdvietnam.me/threads/thot-nhac-karaoke-cua-thong_the.682687/page-14
+
+[voz.vn]
+match = 4.3%%
+title = xin tư vấn chiếu mát nằm mùa hè
+url = https://voz.vn/t/xin-tu-van-chieu-mat-nam-mua-he.338356/
 
