--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-07-27 04:32:51
+lastsearch = 2024-07-27 08:12:27
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -22,9 +22,9 @@ title = chiếu trúc giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=chiếu trúc
 
 [tiki.vn]
-match = -19.4%%
-title = Chiếu trúc hạt hàng chính hãng, giao nhanh - Tháng 7, 2024
-url = https://tiki.vn/search?q=chiếu trúc hạt
+match = -6.5%%
+title = Chiếu trúc hàng chính hãng, giao nhanh - Tháng 7, 2024
+url = https://tiki.vn/search?q=chiếu trúc
 
 [demxanh.com]
 match = -9.7%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 54.8%%
-title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
+match = 9.7%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
 
 [www.lazada.vn]
 match = 16.1%%
