--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-27 05:49:34
+lastsearch = 2024-07-27 08:10:46
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [chieutrelanlan.com]
-match = 10.7%%
-title = Chiếu trúc quế lâm màu trắng không viền 180x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-mau-trang-khong-vien-180x200cm-39.html
+match = 25.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [www.facebook.com]
 match = 71.4%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc Quế Lâm | Hai Phong
 url = https://www.facebook.com/ChieuTrucQueLam/
 
 [shopee.vn]
-match = 42.9%%
-title = Chiếu trúc Quế Lâm - hàng chuẩn loại 1
-url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.20551076.970075626
+match = -21.4%%
+title = [ Ảnh thật 100%%] Chiếu trúc Quế Lâm loại 1 cao cấp 2 mắt ...
+url = https://shopee.vn/-Ảnh-thật-100-Chiếu-trúc-Quế-Lâm-loại-1-cao-cấp-2-mắt-ngọc-i.19058947.7184515371
 
 [demxanh.com]
 match = -25.0%%
