--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-26 23:39:54
+lastsearch = 2024-07-27 08:08:42
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -285.7%%
-title = Cập nhật giá TIVI dưới 10 triệu trong tháng 7 tại Điện máy XANH
-url = https://www.youtube.com/watch?v=j_AHP98h1wM
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -64.3%%
-title = I am Married to a U.S. Citizen
-url = https://www.uscis.gov/citizenship/learn-about-citizenship/citizenship-and-naturalization/i-am-married-to-a-us-citizen
+match = -50.0%%
+title = Explore my Options | USCIS
+url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
 match = -157.1%%
@@ -87,9 +87,9 @@ title = Green card
 url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
-match = 7.1%%
-title = The Mask (1994)
-url = https://www.imdb.com/title/tt0110475/
+match = 0.0%%
+title = Blue Bayou (2021)
+url = https://www.imdb.com/title/tt11121664/
 
 [www.boundless.com]
 match = -128.6%%
@@ -440,4 +440,9 @@ url = https://www.yelp.com/search?find_desc=Xanh+Restaurant&find_loc=San+Jose,+C
 match = -14.3%%
 title = Labatt USA: Welcome
 url = https://www.labattusa.com/
+
+[www.wantavisa.com]
+match = 0.0%%
+title = 
+url = https://www.wantavisa.com/processing-times.php
 
