--- a/images/tham-giuong-bo-de-18/config.ini
+++ b/images/tham-giuong-bo-de-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-18.html
 lastopen = 2024-06-09 22:57:01
 
 [search]
-lastsearch = 2024-07-27 06:22:42
+lastsearch = 2024-07-27 08:08:00
 
 [erado.vn]
 match = 0.0%%
 title = Giường ngủ da hạng sang mã 18
-url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html
+url = https://erado.vn/giuong-dang-giam-gia/giuong-ngu-da-hang-sang-ma-18.html?srsltid=AfmBOopsIHThPfKzSaIetcMehSgoZe3LtHZgPqqcW1OVhn3eq0g8LmNu
 
 [shopee.vn]
 match = -105.0%%
@@ -24,12 +24,12 @@ url = https://h5.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038
 [bilystore.vn]
 match = -100.0%%
 title = Thảm phòng ngủ NA18 - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-phong-ngu-na18/
+url = https://bilystore.vn/tham-phong-ngu-na18/?srsltid=AfmBOooWBDdtzosGP9uvuwFjMlDNGcyap5o_enn7Wnero5y5Nm2TrsqH
 
 [www.lazada.vn]
 match = -5.0%%
 title = BỘ 18 NÚT NHỰA GIƯỜNG XẾP NHÔM US
-url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html
+url = https://www.lazada.vn/products/bo-18-nut-nhua-giuong-xep-nhom-us-i615932038.html?srsltid=AfmBOop7VWotoOLqv0J0cA43c3A61BPFfUfKFvyOo7tAAAFMvPn7T_6e
 
 [fhomehatinh.com]
 match = -140.0%%
@@ -239,7 +239,7 @@ url = https://www.kymdan.com/danh-muc/giuong-sat-xep-di-dong
 [sofatoanquoc.com]
 match = -65.0%%
 title = Giường Ngủ Bọc Vải Mã 18 - Sofa Toàn Quốc
-url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html
+url = https://sofatoanquoc.com/giuong-ngu-boc-vai-ma-18.html?srsltid=AfmBOoqom6UtuBAbXLdRyhrT4FvMer759bbqYxUbc9ePqmugMyc_ob_2
 
 [giuonggapvietnhat.vn]
 match = -50.0%%
