--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-07-27 03:17:03
+lastsearch = 2024-07-27 08:02:09
 
 [gobearcats.com]
 match = -142.1%%
@@ -337,9 +337,9 @@ title =
 url = https://www.prepscholar.com/sat/s/colleges/UC-Davis-admission-requirements
 
 [evstamps.hibid.com]
-match = -115.8%%
-title = British Honduras Stamps 1865-1965 neatly mounted
-url = https://evstamps.hibid.com/lot/187490436
+match = -152.6%%
+title = Lot # : 30 - Confederate States Stamps Cover #7 Single use
+url = https://evstamps.hibid.com/lot/187490381
 
 [ltg.gov.vi]
 match = -168.4%%
