--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-26 19:00:18
+lastsearch = 2024-07-27 09:45:44
 
 [tiki.vn]
 match = -138.9%%
@@ -37,19 +37,19 @@ title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 743
 url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-743-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -72.2%%
-title = Bộ ga chun Cotton chống thấm màu ghi nhạt
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-ghi-nhat.html
+match = -77.8%%
+title = Bộ ga chun Cotton chống thấm màu xanh ngọc
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html?srsltid=AfmBOorzdpfupG0zGfmM1t4YJvptk29tSTo2TRH3bATA3rVn0bXi7Ajb
 
 [foreverbedding.net]
 match = -66.7%%
 title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+url = https://foreverbedding.net/bo-ga-phu-passion-a112?srsltid=AfmBOopH97h6IKBrkMLgrfYfcdM3fRPjOr3NyfWcnkMRFGlXI6Dtsxfi
 
 [aeoneshop.com]
 match = -105.6%%
 title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
-url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
+url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong?srsltid=AfmBOoo2n-m9KriI_kGXaslAdcFHqcFhg3LPgJSd8cJxTxq6tU0h9W3n
 
 [everonvn.com.vn]
 match = 27.8%%
@@ -62,9 +62,9 @@ title = BỘ CHĂN GA GỐI MẪU ĐƠN KINTSUGI - ESMS24011
 url = https://www.everonvni.vn/bo-chan-ga-goi-mau-don-kintsugi-esms24011/
 
 [shopee.vn]
-match = -122.2%%
-title = Everon Chính hãng Hàn Quốc, Cửa hàng trực tuyến
-url = https://shopee.vn/everonvietnamchinhhang
+match = -116.7%%
+title = Ga phủ Camelia Everon 160x200cm EP giá tốt Tháng 5 ...
+url = https://shopee.vn/search?keyword=Ga phủ Camelia Everon 160x200cm EP
 
 [draphoangcuong.xim.tv]
 match = -100.0%%
