--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-27 06:46:05
+lastsearch = 2024-07-27 09:41:31
 
 [shopee.vn]
-match = -65.2%%
-title = Chiếu Nhựa Thái Bình, chiếu trải ăn cơm Gập Gọn đủ kích ...
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-chiếu-trải-ăn-cơm-Gập-Gọn-đủ-kích-thước-i.22156385.603951887
+match = -17.4%%
+title = Chiếu nhựa thái bình gấp gọn (đủ mọi kích thươc)
+url = https://shopee.vn/Chiếu-nhựa-thái-bình-gấp-gọn-(đủ-mọi-kích-thươc)-i.266319381.9544957396
 
 [www.facebook.com]
 match = 52.2%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOoo0og96unV_VRIZGJ6jp4KMiDlWnUJM9qlgK1zkn8-J0p8nen_n
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -64,7 +64,7 @@ url = https://demhong.vn/chieu-tre-viet-pho-men/
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOor5RV363bl7MsUneR1wDRZr74k-8zmgR2zonybZSqkS3yhpcvPP
 
 [h5.lazada.vn]
 match = -17.4%%
@@ -72,9 +72,9 @@ title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
 url = https://h5.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
 
 [m.facebook.com]
-match = -13.0%%
-title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
-url = https://m.facebook.com/61553157173242/
+match = -43.5%%
+title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
+url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=be_BY
 
 [chieu.com.vn]
 match = -117.4%%
