--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-27 00:30:07
+lastsearch = 2024-07-27 09:44:43
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -22,9 +22,9 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
 match = -61.9%%
