--- a/images/tui-korea-16/config.ini
+++ b/images/tui-korea-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-16.html
 lastopen = 2024-06-17 10:42:33
 
 [search]
-lastsearch = 2024-07-27 04:35:12
+lastsearch = 2024-07-27 09:37:41
 
 [www.cfd-online.com]
 match = -266.7%%
@@ -107,9 +107,9 @@ title = TUI Hotels & Resorts shares green recommendations to ...
 url = https://www.ttgasia.com/2023/06/16/tui-hotels-resorts-shares-green-recommendations-to-drive-sustainable-hospitality/
 
 [www.tui.co.uk]
-match = -258.3%%
-title = TUI.co.uk | Holidays, Flights & Cruises 2024 / 2025
-url = https://www.tui.co.uk/
+match = -41.7%%
+title = Find & Book Flights
+url = https://www.tui.co.uk/flight/
 
 [maritime-executive.com]
 match = -316.7%%
