--- a/images/vo-goi-ks-uc-50-70/config.ini
+++ b/images/vo-goi-ks-uc-50-70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ks-uc-50-70.html
 lastopen = 2024-06-10 00:52:12
 
 [search]
-lastsearch = 2024-07-27 05:59:10
+lastsearch = 2024-07-27 09:40:49
 
 [www.lazada.vn]
 match = -27.8%%
@@ -14,7 +14,7 @@ url = https://www.lazada.vn/tag/vo-goi-50x70-trang/?srsltid=AfmBOopRKx5egYGylx_g
 [ru9.vn]
 match = -38.9%%
 title = Bật Mí: Vỏ Gối Khách Sạn Dùng Loại Gì?
-url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi?srsltid=AfmBOopboBnL_jpg1I9tgiOGcGWC8wR_FmhqpXF7zStvNAquNJU2tr_I
+url = https://ru9.vn/blogs/magazine/vo-goi-khach-san-dung-la-loai-gi
 
 [www.diepxuan.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = {search_title}
 url = {search_url}
 
 [ninhouse.vn]
-match = 44.4%%
-title = Vỏ gối nằm Classic
-url = https://ninhouse.vn/collections/vo-goi-nam-classic?srsltid=AfmBOopS_XJlFzHqP5XXy4fC9sDmxkaMLl5PR4zNCI-ENzQ0LnckSWcR
+match = 43.8%%
+title = Vỏ gối khách sạn
+url = https://ninhouse.vn/products/vo-goi-khach-san
 
 [tonybed.vn]
 match = -100.0%%
@@ -89,7 +89,7 @@ url = https://thegioidemviet.vn/vo-goi-khach-san/
 [demxanh.com]
 match = -155.6%%
 title = Chuyên các sản phẩm vỏ gối chính hãng giá rẻ nhất Hà Nội
-url = https://demxanh.com/vo-goi.html?srsltid=AfmBOoq-XaGB27r84YdKgRP1D5w5xakRxOxuQ3VvHDQet-Wg5lKxPQ8f
+url = https://demxanh.com/vo-goi.html
 
 [templeshalom.ca]
 match = 0.0%%
@@ -167,9 +167,9 @@ title = Perspective on photonic memristive neuromorphic computing
 url = https://photonix.cn/cn/article/doi/10.1186/s43074-020-0001-6
 
 [sagatexvietnam.online]
-match = -122.2%%
-title = Vỏ Gối Khách Sạn 6 Sao, 100%% Cotton, Vải Dày, Mềm Mại
-url = https://sagatexvietnam.online/product/bao-goi-cao-cap-mau-trang-vai-t500-100-cotton-sagatex-viet-nam/
+match = -138.9%%
+title = Vỏ Gối Khách Sạn 5 Sao, Vải 100%% Cotton Cao Cấp, Mềm Mại
+url = https://sagatexvietnam.online/product/vo-goi-mau-trang-vai-t400-100-cotton-sagatex-50cmx70cm/
 
 [www.thecooperativelogisticsnetwork.com]
 match = -38.9%%
@@ -202,9 +202,9 @@ title = Talis S Single lever basin mixer 100 with pop-up waste set
 url = https://www.hansgrohe.com/articledetail-talis-s-single-lever-basin-mixer-100-with-pop-up-waste-set-72020000
 
 [pro.hansgrohe.com]
-match = -200.0%%
-title = Crometta S, Shower system 240 1jet with single lever mixer ...
-url = https://pro.hansgrohe.com/articledetail-crometta-s-shower-system-240-1jet-with-single-lever-mixer-27958000
+match = -155.6%%
+title = Talis E Shower mixers: 1 function, Chrome, Item No. ...
+url = https://pro.hansgrohe.com/articledetail-talis-e-single-lever-shower-mixer-for-concealed-installation-for-ibox-universal-71765000
 
 [www.sciencedirect.com]
 match = -150.0%%
