CI images update

--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-07-27 08:05:17
+lastsearch = 2024-07-27 10:01:54
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -422,9 +422,9 @@ title =
 url = https://www.nolo.com/legal-encyclopedia/can-your-hoa-prohibit-you-from-flying-your-favorite-flag.html
 
 [www.southfloridalawpllc.com]
-match = -88.2%%
-title = Q&A: Florida HOA Board Member Certification
-url = https://www.southfloridalawpllc.com/2021/08/15/qa-florida-hoa-board-member-certification/
+match = -41.2%%
+title = HOA or Condo Association Disputes
+url = https://www.southfloridalawpllc.com/2021/03/10/hoa-or-condo-association-disputes/
 
 [www.nomadicrealestate.com]
 match = 0.0%%
