--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-07-27 06:15:17
+lastsearch = 2024-07-27 09:49:48
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -20.6%%
-title = Bộ chăn ga Everon ESB-22020 mang phong cách trẻ trung ...
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-22020-pd.html
+match = -8.8%%
+title = Bộ chăn ga Everon EPM-22060 tone màu ghi đậm và nhạt
+url = https://everonhanquoc.com.vn/bo-chan-ga-everon-epm-22060-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -37,9 +37,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [www.everonvni.vn]
-match = 23.5%%
-title = BỘ CHĂN GA GỐI CÁNH ĐỒNG NẮNG - EST24035
-url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
+match = 11.8%%
+title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
+url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
 
 [foreverbedding.net]
 match = -8.8%%
@@ -83,8 +83,8 @@ url = https://www.everonvn.vn/chi-tiet/everon-est24035.html
 
 [demxanh.com]
 match = -2.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 20
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-20.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 13
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-13.html
 
 [antbedding.com]
 match = 26.5%%
