--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-07-27 08:00:45
+lastsearch = 2024-07-27 09:51:11
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -17,9 +17,9 @@ title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
 url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
-match = 21.1%%
-title = GA CHỐNG THẤM CAO CẤP 2m x 2m2
-url = https://www.lazada.vn/products/ga-chong-tham-cao-cap-2m-x-2m2-i1990801523.html
+match = -68.4%%
+title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [demgiare.net]
 match = 5.3%%
@@ -190,4 +190,9 @@ url = https://www.sendo.vn/ga-chong-tham-cua-nhat.htm
 match = -168.4%%
 title = Sports betting roundup: Xander Schauffele goes from third ...
 url = https://www.caledonianrecord.com/sports/world/sports-betting-roundup-xander-schauffele-goes-from-third-favorite-to-first-place-at-british-open/article_3af60241-538e-50d4-9217-6ec3496edd5d.html
+
+[www.keysnews.com]
+match = -142.1%%
+title = Double Mastectomy May Offer No Survival Benefit to ...
+url = https://www.keysnews.com/lifestyles/health/double-mastectomy-may-offer-no-survival-benefit-to-women-with-breast-cancer/article_82e1d2c4-e6ce-5297-b5af-c2a61de3b18f.html
 
