--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-27 09:05:04
+lastsearch = 2024-07-27 10:06:51
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -132,9 +132,9 @@ title = Buy Blue Man Group Las Vegas Tickets
 url = https://www.blueman.com/las-vegas/buy-tickets
 
 [www.facebook.com]
-match = -264.3%%
-title = Duy Long - Chàng trai xanh lá quyết theo đuổi nữ chính từ ...
-url = https://www.facebook.com/NguoiAyLaAi.VieChannel/videos/duy-long-chàng-trai-xanh-lá-quyết-theo-đuổi-nữ-chính-từ-show-ra-đời-thật-người-ấ/425027899585078/
+match = 14.3%%
+title = Rau Xanh Houston
+url = https://www.facebook.com/groups/931300110674323/
 
 [mail.google.com]
 match = -14.3%%
