--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-07-27 09:06:10
+lastsearch = 2024-07-27 10:03:18
 
 [www.lazada.vn]
 match = -94.4%%
@@ -27,14 +27,14 @@ title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
 url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = -155.6%%
+title = Vietnamese Community of Oregon - VNCO.org | Portland OR
+url = https://www.facebook.com/vncousa/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -144.4%%
-title = 📍nem cuốn: 4 hoè nhai. ⭐️: 10-40 cành. #LearnOnTikTok ...
-url = https://www.tiktok.com/@longlongneee/video/7272331567031209224
+match = -38.9%%
+title = Chao Recipe Vietnamese Meatball
+url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
 
 [vi.wikipedia.org]
 match = -27.8%%
