--- a/images/tam-trai-topper-everon18/config.ini
+++ b/images/tam-trai-topper-everon18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-topper-everon18.html
 lastopen = 2024-06-07 01:31:26
 
 [search]
-lastsearch = 2024-07-27 09:03:22
+lastsearch = 2024-07-27 10:06:09
 
 [everonvn.com.vn]
 match = -12.5%%
@@ -17,9 +17,9 @@ title = Tấm trải - Topper
 url = https://everonthaiha.com/nhom-san-pham/309/tam-trai-topper.html
 
 [kbedding.vn]
-match = -41.7%%
-title = Tấm trải tiện ích Everon Lite (giao màu ngẫu nhiên)
-url = https://kbedding.vn/product/tam-trai-tien-ich-microfiber-everon-lite/
+match = -54.2%%
+title = Tấm Topper Xanh Lá Everon Lite ELM203-1 - K-Bedding
+url = https://kbedding.vn/product/tam-topper-xanh-la-everon-lite-elm203-1/
 
 [everon.online]
 match = -8.3%%
@@ -28,8 +28,8 @@ url = https://everon.online/collections/topper-tam-tang-tien-nghi
 
 [www.lazada.vn]
 match = -66.7%%
-title = Tấm Trải Everon Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tam-trai-everon/
+title = Tấm Trải K-Bedding By Everon ngủ văn phòng, dã ngoại ...
+url = https://www.lazada.vn/products/tam-trai-everon-lite-ngu-van-phong-da-ngoai-co-the-gap-gon-giao-mau-ngau-nhien-i708164619.html
 
 [www.everonvn.vn]
 match = -20.8%%
