--- a/images/tham-giuong-loai-1-14/config.ini
+++ b/images/tham-giuong-loai-1-14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-1-14.html
 lastopen = 2024-06-07 00:36:45
 
 [search]
-lastsearch = 2024-07-27 06:27:13
+lastsearch = 2024-07-27 10:05:48
 
 [bilystore.vn]
 match = -95.2%%
 title = Thảm trải sàn phòng ngủ - Bilystore thảm trải sàn cao cấp
-url = https://bilystore.vn/tham-trai-san-phong-ngu/
+url = https://bilystore.vn/tham-trai-san-phong-ngu/?srsltid=AfmBOoo7cC_9m0W2fkBt5LtYkzQGj0tNPwHanIGhO6SYvV1PnPEfVbZt
 
 [shopee.vn]
 match = -52.4%%
