--- a/images/tham-giuong-loai-2-15/config.ini
+++ b/images/tham-giuong-loai-2-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-15.html
 lastopen = 2024-06-07 00:36:25
 
 [search]
-lastsearch = 2024-07-27 04:40:34
+lastsearch = 2024-07-27 09:52:57
 
 [shopee.vn]
-match = -90.5%%
-title = Thảm trải giường - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/thảm trải giường
+match = -57.1%%
+title = Thảm nhung trải sàn trải giường 1.8x2m và 1.6x2m
+url = https://shopee.vn/Thảm-nhung-trải-sàn-trải-giường-1.8x2m-và-1.6x2m-2x2.2m-hàng-loại-1-thảm-tấm-đủ-màu-i.6844632.773184193
 
 [khosibaclieu.com]
 match = -9.5%%
@@ -17,9 +17,9 @@ title = Thảm Lót Chân Giường Lớn 80cm x 2 mét (15)
 url = https://khosibaclieu.com/tham-lot-chan-giuong-lon-80cm-x-2-met-15
 
 [www.sendo.vn]
-match = -19.0%%
-title = thảm trải giường [Được kiểm hàng] 23162672
-url = https://www.sendo.vn/tham-trai-giuong-duo-c-kie-m-ha-ng-23162672-117151315.html
+match = -76.2%%
+title = Thảm Chân Giường Siêu Chất, Giá Gốc, Hàng Mới Mỗi Ngày
+url = https://www.sendo.vn/tham-chan-giuong.htm
 
 [tiki.vn]
 match = -38.1%%
